feat!: add preserve loading screen script

--- a/default.project.json
+++ b/default.project.json
@@ -23,6 +23,10 @@
     "StarterGui": {
       "$path": "src/client/StarterGui",
       "$ignoreUnknownInstances": true
+    },
+    "ReplicatedFirst": {
+      "$path": "src/client/ReplicatedFirst",
+      "$ignoreUnknownInstances": true
     }
   }
 }
