test: update project json for test folder

--- a/default.project.json
+++ b/default.project.json
@@ -27,6 +27,10 @@
     "ReplicatedFirst": {
       "$path": "src/client/ReplicatedFirst",
       "$ignoreUnknownInstances": true
+    },
+    "TestService": {
+      "$path": "test",
+      "$ignoreUnknownInstances": true
     }
   }
 }
