--- a/default.project.json
+++ b/default.project.json
@@ -31,6 +31,11 @@
     "TestService": {
       "$path": "test",
       "$ignoreUnknownInstances": true
+    },
+    "TextChatService": {
+      "$properties": {
+        "CreateDefaultCommands": false
+      }
     }
   }
 }
