--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,4 +10,6 @@ theme:
 nav:
   - Home: index.md
   - Level:
-    - Level Setup: level/level-setup.md
+    - Level Setup: level/level_setup.md
+
+use_directory_urls: true
