doc: fix path to level doc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,6 @@ theme:
 nav:
   - Home: index.md
   - Level:
-    - Level Setup: level/level_setup.md
+    - Level Setup: level/level-setup.md
 
 use_directory_urls: true
