doc: attempt to fix shit

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,7 @@
 site_name: Asymptote Engine Docs
 site_url: https://nirlekaplay.github.io/asymptote-engine/
+repo_name: NirlekaPlay/asymptote-engine
+repo_url: https://github.com/NirlekaPlay/asymptote-engine
 theme:
   name: material
   features:
@@ -11,5 +13,3 @@ nav:
   - Home: index.md
   - Level:
     - Level Setup: level/level-setup.md
-
-use_directory_urls: true
