--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -120,6 +120,11 @@ nav:
   - Home: index.md
   - Tutorials:
     - Disguises: tutorials/disguises.md
+    - Setting up your NPCs: tutorials/npcs.md
   - Level:
     - Level Setup: level/level-setup.md
-  - Contributing: contributing/conventions.md
+    - Props: level/props.md
+    - Props Reference: level/props-reference.md
+  - Contributing:
+    - Bugs: contributing/bugs.md
+    - Conventions: contributing/conventions.md
