--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,7 +127,7 @@ nav:
     - Props: level/props.md
     - Props Reference: level/props-reference.md
   - Engine:
-    - Conditional Expressions: conditional-expressions.md
+    - Conditional Expressions: engine/conditional-expressions.md
   - Contributing:
     - Bugs: contributing/bugs.md
     - Conventions: contributing/conventions.md
