--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,8 +113,8 @@ plugins:
   - blog
   - search:
       separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
-  - minify:
-      minify_html: true
+  #- minify:
+  #    minify_html: true
 
 nav:
   - Home: index.md
@@ -131,3 +131,6 @@ nav:
   - Contributing:
     - Bugs: contributing/bugs.md
     - Conventions: contributing/conventions.md
+  - Planning:
+    - Huh?: planning/planning.md
+    - Proximity prompts: planning/proximity-prompts.md
