feat!: override default roblox player scripts

--- a/default.project.json
+++ b/default.project.json
@@ -20,6 +20,15 @@
       "StarterPlayerScripts": {
         "client": {
           "$path": "src/client/PlayerScripts"
+        },
+        "PlayerScriptsLoader": {
+          "$className": "LocalScript"
+        },
+        "RbxCharacterSounds": {
+          "$className": "LocalScript"
+        },
+        "PlayerModule": {
+          "$className": "ModuleScript"
         }
       }
     },
